--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,28 +10,35 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Ensure all files are pulled
+
+      - name: Debug Workflow Directory
+        run: ls -la  # Check if package.json is present
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '16'
 
       - name: Install dependencies
         run: npm install
+        working-directory: ./my-app  # Adjust if needed
 
       - name: Build React app
         run: npm run build
+        working-directory: ./my-app  # Adjust if needed
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AKIAS66UCSWRXYV34PFU }}
           aws-secret-access-key: ${{ secrets.LOL9IHXb55zWb1MOJxQ8rjAYfMssu9ojTG5xKCMq }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: ${{ secrets.us-west-2 }}
 
       - name: Deploy to S3
-        run: aws s3 sync ./build s3://$softlife-frontend --delete
+        run: aws s3 sync ./my-app/build s3://${{ secrets.softlife-frontend }} --delete
 
       - name: Invalidate CloudFront cache
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.E11VB7KS6N5MQM }} --paths "/*"
