--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,7 +15,7 @@ jobs:
           fetch-depth: 0  # Ensure all files are pulled
 
       - name: Debug: Show Directory Structure
-        run: ls -la  # Confirm 'my-app/' exists
+        run: ls -la my-app  # Confirm 'my-app/' exists
 
       - name: Navigate to my-app & Show Structure
         run: cd my-app && ls -la  # Confirm 'package.json' exists
